raspberry/base/hasty-challenge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-api
  # annotations:
  #   linkerd.io/inject: enabled
  labels:
    app: job-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: job-api
    spec:
      containers:
      - name: job-api
        image: nginx
        ports:
        - containerPort: 3000
        command: ["./cli"]
        args: ["serve"]
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
---
