raspberry/base/hasty-challenge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-api
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: job-api
