raspberry/base/hasty-challenge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - app.picluster.xyz
    secretName: job-api-tls
  rules:
  - host: job-api.picluster.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: job-api
              port:
                number: 3000
